"Java Robot used to automate more"