@@ -2,6 +2,7 @@ import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
+import java.util.ArrayList;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
@@ -15,13 +16,15 @@ import org.apache.commons.cli.Options;
 import org.apache.commons.cli.ParseException;
 
 public class InviteSenderToLiker {
+    static String country = "benin";
     static String containerName = "Cosme Assiogbé";
     static int startIndex = 0;
-    static int nbInvite = 30;
+    static int nbAccount = 30;
     static int index;
     static int counter;
-    static String url = "https://fr-fr.facebook.com/";
+    static String url = "https://www.facebook.com/groups/00entrenous00";
     static boolean urlToOpen = false;
+    static String file = "\"C:\\Program Files\\Mozilla Firefox\\firefox.exe\" -new-tab ";
     static String newAccountOpencommand = "\"C:\\Program Files\\Mozilla Firefox\\firefox.exe\" -new-tab ";
     public static void main(String[] args) throws IOException {
         // create the command line parser
@@ -29,44 +32,74 @@ public class InviteSenderToLiker {
 
         // create the Options
         Options options = new Options();
-        options.addOption("c", "container-name", true, "specify the container to be used" );
+        options.addOption("c", "country", true, "specify a country" );
         options.addOption("u", "url", true, "Url to Open");
+        options.addOption("n", "number-account", true, "Number of invites to send by account");
+        options.addOption("i", "start-index", true, "index to start from" );
+        options.addOption("f", "file", true, "file to read" );
         CommandLine line;
         try {
             line = parser.parse(options, args );
-            containerName = line.hasOption("c") ? line.getOptionValue("c") : containerName;
+            country = line.hasOption("c") ? line.getOptionValue("c") : country;
             startIndex = line.hasOption("i") ? Integer.parseInt(line.getOptionValue("i")) : startIndex;
-            nbInvite = line.hasOption("n") ? Integer.parseInt(line.getOptionValue("n")) : nbInvite;
-            if(line.hasOption("u")) {
-                url = line.getOptionValue("u");
-                urlToOpen = true;
-            }
+            nbAccount = line.hasOption("n") ? Integer.parseInt(line.getOptionValue("n")) : nbAccount;
+            file = line.getOptionValue("f", "liker.txt");
+            
         } catch (ParseException e1) {
             // TODO Auto-generated catch block
             e1.printStackTrace();
         }
-        Path liker = Path.of("liker.txt");
-        sendGenerator(liker, urlToOpen);
+        Path liker = Path.of(file);
+        Path accountPath = Paths.get("/media/parfait/26040AFB040ACE2D/Images/ProfilsFB/resources/accounts.txt");
+        sendGenerator(accountPath, liker, urlToOpen);
     }
 
-    private static void sendGenerator(Path filePath, boolean urlToOpen) {
+    private static void sendGenerator(Path accountPath, Path filePath, boolean urlToOpen) {
         System.out.print("\"C:\\Program Files\\Mozilla Firefox\\firefox.exe\" -new-tab ");
+        List<String> accounts;
         String content;
-        try {
+        try (Stream<String> lines0 = Files.lines(accountPath)
+        ){
+            accounts = lines0.collect(Collectors.toList()); // list of accounts
+            accounts.remove(0); // remove first line of the file which is the title header
+            
+            if (startIndex < 2)
+                startIndex = 2; // In accounts.txt, the first account start with index = 2
+            index = startIndex - 2; counter = startIndex - 2;
+           
+            List<String> containers = new ArrayList<>();
+            while(index < startIndex + nbAccount) {
+                String[] values = accounts.get(counter%accounts.size()).split(",");
+                if(values.length < 4) continue;
+                String accountCountry = values[3];
+                boolean isOld = true;
+                if(values.length > 8) {
+                    isOld = !values[8].equals("new");
+                }
+                if(accountCountry.equals(country) && isOld) {
+                    containers.add(values[0]);
+                    index++;
+                }
+                counter++;
+            }
+            startIndex = index;     
+
             content = Files.readString(filePath);
-            int index = -1;
+            String accountIdentifier = "https://www.facebook.com/";
+            index = -1;
             Set<String> accountUrl = new HashSet<>();
             do {
-                index = content.indexOf("https://www.facebook.com/", index+1);
+                index = content.indexOf(accountIdentifier, index+1);
                 if(index < 0) break; // No account remains
-
+                containerName = containers.get(index % nbAccount);
+                
                 // Here we got an account so we check if there is a "Ajouter", 
                 // sign this guy is not in our friends list 
                 int nextIndex = content.indexOf("<div data-visualcompletion", index);
-                if((nextIndex > 0) && !content.substring(index, nextIndex).contains("Ajouter"))
-                    continue;
-                if((nextIndex < 0) && !content.substring(index).contains("Ajouter"))
-                    continue;
+                // if((nextIndex > 0) && !content.substring(index, nextIndex).contains("Ajouter"))
+                //     continue;
+                // if((nextIndex < 0) && !content.substring(index).contains("Ajouter"))
+                //     continue;
                 // If it is a new profile, the url will contains "profile.php?id=" and ends 
                 // with "&amp;", else it will contains the name and ends with "?__"
                 String url="";
